<resources>
    <string name="app_name">arXiv eXplorer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_dashboard_settings">Dashboard Settings</string>

    <string name="submittedDate">submittedDate</string>
    <string name="lastUpdatedDate">lastUpdatedDate</string>
    <string name="relevance">relevance</string>
    <string name="descending">descending</string>
    <string name="ascending">ascending</string>

    <string name="sort_order_default">@string/descending</string>
    <string name="sort_by_default">@string/submittedDate</string>

    <string-array name="pref_sort_by_list_titles">
        <item>Updated Date</item>
        <item>Submitted Date</item>
        <item>Relevance</item>
    </string-array>
    <string-array name="pref_sort_by_list_values">
        <item>@string/lastUpdatedDate</item>
        <item>@string/submittedDate</item>
        <item>@string/relevance</item>
    </string-array>

    <string name="pref_title_sort_by">Paper Sort By</string>
    <string name="pref_title_sort_order">Paper Sort Order</string>
    <string name="pref_title_clear_downloads">Delete Downloaded Papers Cache</string>
    <string name="pref_title_max_results">Max Results</string>
    <string name="category">Category</string>
    <string name="no_papers_to_display">No Papers to Display</string>
    <string name="rate_arxiv_explorer">Rate arXiv eXplorer</string>
    <string name="settings">Settings</string>
    <string name="download">Download</string>
    <string name="favorite">Favorite</string>
    <string name="browse">Browse</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_paper">Favorite Paper</string>
    <string name="dashboard">Dashboard</string>
    <string name="pref_title_show_abstract">Show Abstract in List View</string>
    <string-array name="pref_sort_order_list_titles">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
    <string-array name="pref_sort_order_list_values">
        <item>@string/descending</item>
        <item>@string/ascending</item>
    </string-array>

    <string name="pref_title_dashboard_preferences">Dashboard Categories</string>
    <string name="menu_refresh">Refresh</string>
    <string name="downloaded">Downloaded</string>
    <string name="pref_title_dark_mode">Dark Mode</string>
    <string name="pref_title_latex">Render Latex</string>
    <string name="share">Share</string>
    <string name="general_preferences">General Preferences</string>
    <string name="sort_by_list_key">sort_by_list</string>
    <string name="sort_order_list_key">sort_order_list</string>
    <string name="max_results_key">max_results</string>
    <string name="delete_downloaded_papers_key">delete_downloaded_papers</string>
    <string name="show_abstract_key">show_abstract</string>
    <string name="dark_mode_key">dark_mode</string>
    <string name="render_latex_key">render_latex</string>
    <string name="dashboard_preferences_key">dashboard_preferences</string>
    <string name="dashboard_preferences">Dashboard Preferences</string>
    <string name="error_loading">Error Loading Papers</string>
    <string name="donate">Donate!</string>
    <string name="read_key">read</string>
    <string name="ad_key">ads</string>
    <string name="pref_title_read">Read Indicator</string>
    <string name="pref_title_ads">Enable Ads</string>

</resources>
