<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="lastUpdatedDate"
        android:entries="@array/pref_sort_by_list_titles"
        android:entryValues="@array/pref_sort_by_list_values"
        android:key="sort_by_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sort_by" />

    <ListPreference
        android:defaultValue="descending"
        android:entries="@array/pref_sort_order_list_titles"
        android:entryValues="@array/pref_sort_order_list_values"
        android:key="sort_order_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sort_order" />

    <EditTextPreference
        android:defaultValue="@string/maxResultDefault"
        android:key="max_results"
        android:title="@string/pref_title_max_results"
        android:inputType="number"
    />

    <SwitchPreference
        android:defaultValue="false"
        android:key="show_abstract"
        android:title="@string/pref_title_show_abstract"
        />

    <Preference
        android:key="delete_downloaded_papers"
        android:title="@string/pref_title_clear_downloads"
        />

</PreferenceScreen>
